--- a/html/welcome.html
+++ b/html/welcome.html
@@ -1,10 +1,8 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<meta http-equiv="Content-Type"
-	content="text/html; charset=<?= Yii::$app->charset ?>" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width">
 		<style type="text/css">
 #outlook a {
@@ -1493,8 +1491,8 @@ table.body table.container .hide-for-large * {
 												<table>
 													<tr>
 														<th><br></br>
-														<h1>ASCO-SEP 5th Edition Online Self-assessment,
-																recovery password process</h1></th>
+														<h1>ASCO-SEP Edition Online Self-assessment,
+																activation process</h1></th>
 														<th class="expander"></th>
 													</tr>
 												</table>
@@ -1518,14 +1516,15 @@ table.body table.container .hide-for-large * {
 													<tr>
 														<th>
 															<p>
-																Hola Dr(a) <?=$user?>.
+																Bienvenido Dr(a) .
+																
 															</p> 
-															<p>Hemos visto que recientemente has solicitado una nueva contraseña.</p>
+															<p>Para poder acceder a la plataforma es necesario <b>activar su cuenta</b> haciendo click en el link que se proporciona a continuación</p>
 																<table class="button swu-button">
 																	<tr>
 																		<td><br><table>
 																				<tr>
-																					<td><a href="<?=$url?>">Cambiar mi contraseña</a></td>
+																					<td><a href="#">Activar mi cuenta</a></td>
 																				</tr>
 																			</table></td>
 																	</tr>
@@ -1538,7 +1537,24 @@ table.body table.container .hide-for-large * {
 										</tr>
 									</tbody>
 								</table>
-								
+								<table class="row">
+									<tbody>
+										<tr>
+											<!-- This container adds whitespace gap at the bottom of main content  -->
+											<th class="small-12 large-12 columns first last">
+												<table>
+													<tr>
+														<th><p>Para futuros accesos sus credenciales de acceso serán:</p>
+															<p><b>Usuario:</b></p>
+															<p><b>Contraseña:</b></p>
+														</th>
+														<th class="expander"></th>
+													</tr>
+												</table>
+											</th>
+										</tr>
+									</tbody>
+								</table>
 								<table class="row">
 									<tbody>
 										<tr>
